--- a/Stark/Base.lproj/Main.storyboard
+++ b/Stark/Base.lproj/Main.storyboard
@@ -7,6 +7,7 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
+        <capability name="Navigation items with more than one left or right bar item" minToolsVersion="7.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -814,10 +815,94 @@
                     <view key="view" contentMode="scaleToFill" id="sPW-7f-aDf">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jXn-hl-X1t">
+                                <rect key="frame" x="0.0" y="64" width="375" height="554"/>
+                                <subviews>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ydb-bW-uF5">
+                                        <rect key="frame" x="137.5" y="100" width="100" height="100"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="100" id="ivs-6s-CYF"/>
+                                            <constraint firstAttribute="width" constant="100" id="zXo-gi-OEM"/>
+                                        </constraints>
+                                    </imageView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Chris David" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fhA-xb-ZAr">
+                                        <rect key="frame" x="130.5" y="215" width="114" height="30.5"/>
+                                        <fontDescription key="fontDescription" name="Tofino-Book" family="Tofino" pointSize="22"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="$58,261" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8oc-PV-ftg">
+                                        <rect key="frame" x="75.5" y="262.5" width="44.5" height="18"/>
+                                        <fontDescription key="fontDescription" name="Tofino-Book" family="Tofino" pointSize="13"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" progress="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="Yhv-bN-lNF">
+                                        <rect key="frame" x="62" y="260.5" width="250" height="2"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="250" id="Hx3-bo-ok9"/>
+                                        </constraints>
+                                        <color key="progressTintColor" red="0.97647058819999999" green="0.6705882353" blue="0.33333333329999998" alpha="1" colorSpace="calibratedRGB"/>
+                                        <color key="trackTintColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                                    </progressView>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rn0-yd-CCS" userLabel="HeaderView">
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="50"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Stark" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4dn-jg-7ik">
+                                                <rect key="frame" x="40" y="4.5" width="82.5" height="41"/>
+                                                <fontDescription key="fontDescription" name="Tofino-Bold" family="Tofino" pointSize="30"/>
+                                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                                        <constraints>
+                                            <constraint firstItem="4dn-jg-7ik" firstAttribute="leading" secondItem="rn0-yd-CCS" secondAttribute="leading" constant="40" id="Dac-v9-9kk"/>
+                                            <constraint firstAttribute="height" constant="50" id="t6w-kE-02q"/>
+                                            <constraint firstItem="4dn-jg-7ik" firstAttribute="centerY" secondItem="rn0-yd-CCS" secondAttribute="centerY" id="u7W-VC-tDR"/>
+                                        </constraints>
+                                    </view>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="$100,000" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OYU-BV-ruI">
+                                        <rect key="frame" x="262" y="262.5" width="51.5" height="16.5"/>
+                                        <fontDescription key="fontDescription" name="Tofino-Book" family="Tofino" pointSize="12"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstItem="Yhv-bN-lNF" firstAttribute="top" secondItem="fhA-xb-ZAr" secondAttribute="bottom" constant="15" id="3lv-aE-OoW"/>
+                                    <constraint firstItem="Yhv-bN-lNF" firstAttribute="centerX" secondItem="jXn-hl-X1t" secondAttribute="centerX" id="Gw3-8s-NKM"/>
+                                    <constraint firstItem="rn0-yd-CCS" firstAttribute="leading" secondItem="jXn-hl-X1t" secondAttribute="leading" id="LWY-9C-ThS"/>
+                                    <constraint firstItem="8oc-PV-ftg" firstAttribute="top" secondItem="Yhv-bN-lNF" secondAttribute="bottom" id="NGu-4K-c8c"/>
+                                    <constraint firstItem="ydb-bW-uF5" firstAttribute="top" secondItem="jXn-hl-X1t" secondAttribute="top" constant="100" id="O6J-Vs-qGZ"/>
+                                    <constraint firstItem="OYU-BV-ruI" firstAttribute="top" secondItem="Yhv-bN-lNF" secondAttribute="bottom" id="Z82-xB-HeO"/>
+                                    <constraint firstAttribute="trailing" secondItem="rn0-yd-CCS" secondAttribute="trailing" id="a0k-3A-iPU"/>
+                                    <constraint firstItem="8oc-PV-ftg" firstAttribute="centerX" secondItem="jXn-hl-X1t" secondAttribute="centerX" constant="-90" id="bUe-Sg-XUb"/>
+                                    <constraint firstItem="ydb-bW-uF5" firstAttribute="centerX" secondItem="jXn-hl-X1t" secondAttribute="centerX" id="bcg-tk-8XA"/>
+                                    <constraint firstItem="fhA-xb-ZAr" firstAttribute="top" secondItem="ydb-bW-uF5" secondAttribute="bottom" constant="15" id="dAq-0c-lo0"/>
+                                    <constraint firstItem="fhA-xb-ZAr" firstAttribute="centerX" secondItem="jXn-hl-X1t" secondAttribute="centerX" id="o8p-9b-kfH"/>
+                                    <constraint firstItem="OYU-BV-ruI" firstAttribute="centerX" secondItem="jXn-hl-X1t" secondAttribute="centerX" constant="100" id="qDS-Gz-o5a"/>
+                                    <constraint firstItem="rn0-yd-CCS" firstAttribute="top" secondItem="jXn-hl-X1t" secondAttribute="top" id="vOB-H7-FEh"/>
+                                </constraints>
+                            </view>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="jXn-hl-X1t" firstAttribute="leading" secondItem="Rxm-jB-inF" secondAttribute="leading" id="c9q-X6-v5N"/>
+                            <constraint firstItem="Rxm-jB-inF" firstAttribute="trailing" secondItem="jXn-hl-X1t" secondAttribute="trailing" id="ekT-jA-FZT"/>
+                            <constraint firstItem="jXn-hl-X1t" firstAttribute="top" secondItem="Rxm-jB-inF" secondAttribute="top" id="rbi-Xh-Wxt"/>
+                            <constraint firstItem="Rxm-jB-inF" firstAttribute="bottom" secondItem="jXn-hl-X1t" secondAttribute="bottom" id="tdn-et-rqT"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="Rxm-jB-inF"/>
                     </view>
-                    <navigationItem key="navigationItem" id="czS-nv-jPU"/>
+                    <navigationItem key="navigationItem" id="czS-nv-jPU">
+                        <leftBarButtonItems>
+                            <barButtonItem title="Wallet" id="hdk-yd-rAH"/>
+                            <barButtonItem title="Profile" id="VZw-5Q-riL"/>
+                        </leftBarButtonItems>
+                    </navigationItem>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="OgC-6Q-Qq5" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -1685,7 +1770,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="1500"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="LoginBackground" translatesAutoresizingMaskIntoConstraints="NO" id="UNh-Ee-J2q">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="NYC" translatesAutoresizingMaskIntoConstraints="NO" id="UNh-Ee-J2q">
                                 <rect key="frame" x="0.0" y="64" width="375" height="600"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="600" id="cSd-TH-Ipf"/>
@@ -2136,15 +2221,6 @@
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="FHf-Gd-6d6">
-                                <rect key="frame" x="0.0" y="20" width="375" height="44"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                                <items>
-                                    <navigationItem id="YMF-Ys-zAj">
-                                        <barButtonItem key="backBarButtonItem" title="         " id="ckK-Jt-5OZ"/>
-                                    </navigationItem>
-                                </items>
-                            </navigationBar>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
@@ -2432,7 +2508,7 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Forgot Password" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Iq0-q6-Cpl">
-                                                <rect key="frame" x="106.5" y="286.5" width="162" height="27.5"/>
+                                                <rect key="frame" x="107.5" y="286.5" width="162" height="27.5"/>
                                                 <fontDescription key="fontDescription" name="Tofino-Medium" family="Tofino" pointSize="20"/>
                                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                 <nil key="highlightedColor"/>
@@ -2593,13 +2669,13 @@
                                                         </connections>
                                                     </textField>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Welll send you an SMS text to verify your identity." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9Ji-wt-bcc">
-                                                        <rect key="frame" x="23" y="431" width="329.5" height="20.5"/>
+                                                        <rect key="frame" x="23.5" y="431" width="329.5" height="20.5"/>
                                                         <fontDescription key="fontDescription" name="Tofino-Book" family="Tofino" pointSize="15"/>
                                                         <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Messaging rates may apply." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1tW-2e-TlB">
-                                                        <rect key="frame" x="93" y="462" width="190.5" height="20.5"/>
+                                                        <rect key="frame" x="92.5" y="462" width="190.5" height="20.5"/>
                                                         <fontDescription key="fontDescription" name="Tofino-Book" family="Tofino" pointSize="15"/>
                                                         <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                                         <nil key="highlightedColor"/>
@@ -3029,6 +3105,7 @@
     </scenes>
     <resources>
         <image name="LoginBackground" width="375" height="667"/>
+        <image name="NYC" width="375" height="667"/>
         <image name="NavBackButton" width="20" height="16"/>
         <image name="NextButton" width="8" height="13"/>
         <image name="Path" width="315" height="2"/>
